--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto Integrador V</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/dashboard.css">
 </head>
@@ -40,16 +40,18 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
                 <h2>Disco de Newton</h2>
                 <div class="main">
-                    <video src=""></video>
+                    <video id="movie" width="384" height="288" preload="auto" controls>
+                        <source src="http://localhost:8080/stream.ogg" type="video/ogg; codecs=theora"
+                            autoplay="autoplay">
+                    </video>
                     <button type="button" id="start" class="btn btn-success">Ligar</button>
                     <button type="button" id="stop" class="btn btn-danger">Desligar</button>
                 </div>
             </main>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
     </script>
@@ -58,21 +60,20 @@
     </script>
     <script>
         $(document).ready(function () {
-            $("#button").click(function () {
-                $("#button").removeClass("btn-success");
-                $("#button").addClass("btn-danger");
-                $(this).text(function (i, text) {
-                    return text === "Ligar" ? "Desligar" : "Ligar";
+            $("#start").click(function () {
+                jQuery.get("http://localhost:3000/motor/on", function (data, status) {
+                    if (status == "success") {
+                        alert("Ligou");
+                    }
+
                 });
-                // $.get("localhost:3000/motor/on", function (data, status) {
-                //     alert("Data: " + data + "\nStatus: " + status);
-                // });
             });
-            $(".btn-success").click(function () {
-                console.log('ligou');
-            });
-            $(".btn-danger").click(function () {
-                console.log('desligou');
+            $("#stop").click(function () {
+                jQuery.get("http://localhost:3000/motor/off", function (data, status) {
+                    if (status == "success") {
+                        alert("Desligou");
+                    }
+                });
             });
         });
     </script>
